crates/rspyts-macros/tests/ui/method_named_new.stderr
error: method name `new` collides with the generated `rspyts_cls__{Type}__new` symbol; rename the method
  --> tests/ui/method_named_new.rs:12:12
   |
12 |     pub fn new(&self) -> u32 {
   |            ^^^

error: `constructor` does not apply to this item; it marks the constructor method inside a #[bridge] impl block
 --> tests/ui/method_named_new.rs:7:14
  |
7 |     #[bridge(constructor)]
  |              ^^^^^^^^^^^
